<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PerfilFragment"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="@color/blanco_fondo"
    >


    <LinearLayout
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="366dp"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/tvCerrarsesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/tvCerrarsesion"
            android:textAlignment="textEnd"
            android:textSize="20dp"
            android:textColor="@color/azul"
            android:textStyle="bold"
            android:minHeight="48dp"
            android:minWidth="48dp"/>

        <TextView
            android:id="@+id/tvOrdenesCompra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/tvOrdenesCompra"
            android:textAlignment="textEnd"
            android:textSize="20dp"
            android:textColor="@color/azul"
            android:textStyle="bold"
            android:minHeight="48dp"
            android:minWidth="48dp"/>

        <TextView
            android:id="@+id/tvFoodyBurguer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/tvFoodyBurguer"
            android:textAlignment="textEnd"
            android:textSize="20dp"
            android:textColor="@color/azul"
            android:textStyle="bold"
            android:minHeight="48dp"
            android:minWidth="48dp"/>

        <TextView
            android:id="@+id/tvAyuda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/tvAyuda"
            android:textAlignment="textEnd"
            android:textSize="20dp"
            android:textColor="@color/azul"
            android:textStyle="bold"
            android:minHeight="48dp"
            android:minWidth="48dp"/>

    </LinearLayout>


</RelativeLayout>